[gd_scene load_steps=7 format=2]

[ext_resource path="res://resources/m5x7.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://resources/kenneyUI.tres" type="Theme" id=2]
[ext_resource path="res://scenes/ui/ComboUnlockControl.gd" type="Script" id=3]
[ext_resource path="res://scenes/ui/DraggableWindow.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 1 )

[node name="ComboUnlockControl" type="Node2D"]
script = ExtResource( 3 )

[node name="DraggableWindow" parent="." instance=ExtResource( 4 )]

[node name="NinePatchRect" parent="DraggableWindow/MarginContainer" index="0"]
margin_right = 523.0
margin_bottom = 361.0

[node name="MarginContainer" parent="DraggableWindow/MarginContainer" index="1"]
margin_right = 523.0
margin_bottom = 361.0

[node name="VBoxContainer" parent="DraggableWindow/MarginContainer/MarginContainer" index="0"]
margin_right = 519.0
margin_bottom = 353.0

[node name="PanelContainer" parent="DraggableWindow/MarginContainer/MarginContainer/VBoxContainer" index="0"]
margin_right = 515.0

[node name="MarginContainer" parent="DraggableWindow/MarginContainer/MarginContainer/VBoxContainer/PanelContainer" index="0"]
margin_right = 515.0

[node name="Label" parent="DraggableWindow/MarginContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer" index="0"]
margin_right = 511.0

[node name="Button" parent="DraggableWindow/MarginContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer" index="1"]
margin_left = 0.0
margin_right = 19.0

[node name="CenterContainer" parent="DraggableWindow/MarginContainer/MarginContainer/VBoxContainer" index="1"]
margin_right = 515.0
margin_bottom = 349.0

[node name="MarginContainer" type="MarginContainer" parent="DraggableWindow/MarginContainer/MarginContainer/VBoxContainer/CenterContainer" index="0"]
margin_right = 515.0
margin_bottom = 317.0
custom_constants/margin_right = 64
custom_constants/margin_top = 64
custom_constants/margin_left = 64
custom_constants/margin_bottom = 64

[node name="VBoxContainer" type="VBoxContainer" parent="DraggableWindow/MarginContainer/MarginContainer/VBoxContainer/CenterContainer/MarginContainer"]
margin_left = 64.0
margin_top = 64.0
margin_right = 451.0
margin_bottom = 253.0
alignment = 1

[node name="Label" type="Label" parent="DraggableWindow/MarginContainer/MarginContainer/VBoxContainer/CenterContainer/MarginContainer/VBoxContainer"]
margin_right = 387.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 1 )
text = "Combo Unlocked"
align = 1

[node name="NameLabel" type="Label" parent="DraggableWindow/MarginContainer/MarginContainer/VBoxContainer/CenterContainer/MarginContainer/VBoxContainer"]
margin_top = 55.0
margin_right = 387.0
margin_bottom = 93.0
rect_pivot_offset = Vector2( -2296.57, -512.24 )
custom_fonts/font = SubResource( 2 )
text = "Something"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DescriptionLabel" type="Label" parent="DraggableWindow/MarginContainer/MarginContainer/VBoxContainer/CenterContainer/MarginContainer/VBoxContainer"]
margin_top = 97.0
margin_right = 387.0
margin_bottom = 135.0
rect_pivot_offset = Vector2( -2296.57, -512.24 )
custom_fonts/font = SubResource( 2 )
text = "Bonuses for winter tags"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="DraggableWindow/MarginContainer/MarginContainer/VBoxContainer/CenterContainer/MarginContainer/VBoxContainer"]
margin_top = 139.0
margin_right = 387.0
margin_bottom = 189.251
theme = ExtResource( 2 )
text = "OK"

[connection signal="pressed" from="DraggableWindow/MarginContainer/MarginContainer/VBoxContainer/CenterContainer/MarginContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]

[editable path="DraggableWindow"]
